--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>テンプレートゲーム</title>
+    <title>dev-僕らの予知夢からの脱出</title>
 </head>
 
 <body>
-    <script src="./dist/main.js"></script>
+    <script src="./build/main.js"></script>
 </body>
 
 </html>
