--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>dev-僕らの予知夢からの脱出</title>
+    <title>僕らの予知夢からの脱出</title>
 </head>
 
 <body>
